--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Paradigms
-
-    </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Programming Paradigms</title>
+    <link rel="stylesheet" href="app.css" />
 </head>
 
 <body>
-
+    <form id="user-input">
+        <div class="form-control">
+            <label for="username">Username</label>
+            <input type="text" id="username" />
+        </div>
+        <div class="form-control">
+            <label for="password">Password</label>
+            <input type="password" id="password" />
+        </div>
+        <button type="submit">Create User</button>
+    </form>
 </body>
 
 </html>
